# aoc2024

./: .gitattributes  Gemfile  README.md  _config.yml  aoc2024-bench-9.12.html  aoc2024-bench.html  get-inputs  hyperfine.md  index.md
.github/workflows/: get-inputs.yml  hs-bench.yml  hs.yml  hyperfine.yml  kt-bench.yml  kt.yml  py-bench.yml  py.yml  rs-bench.yml  rs.yml
criterion/: index.html
criterion/day 1/part 1/: index.html
criterion/day 1/part 2/: index.html
criterion/day 10/part 1/: index.html
criterion/day 10/part 2/: index.html
criterion/day 11/part 1/: index.html
criterion/day 11/part 2/: index.html
criterion/day 12/: index.html
criterion/day 12/part 1/: index.html
criterion/day 12/part 2/: index.html
criterion/day 13/part 1/: index.html
criterion/day 13/part 2/: index.html
criterion/day 14/part 1/: index.html
criterion/day 14/part 2/: index.html
criterion/day 15/: index.html
criterion/day 15/part 1/: index.html
criterion/day 15/part 2/: index.html
criterion/day 16/part 1/: index.html
criterion/day 16/part 2/: index.html
criterion/day 17/: index.html
criterion/day 17/part 1/: index.html
criterion/day 17/part 2/: index.html
criterion/day 18/part 1/: index.html
criterion/day 18/part 2/: index.html
criterion/day 19/solve/: index.html
criterion/day 2/part 1/: index.html
criterion/day 2/part 2/: index.html
criterion/day 20/part 1/: index.html
criterion/day 20/part 2/: index.html
criterion/day 21/part 1/: index.html
criterion/day 21/part 2/: index.html
criterion/day 22/: index.html
criterion/day 22/part 1/: index.html
criterion/day 22/part 2/: index.html
criterion/day 23/part 1/: index.html
criterion/day 23/part 2/: index.html
criterion/day 24/part 1/: index.html
criterion/day 24/part 2/: index.html
criterion/day 25/part 1/: index.html
criterion/day 3/part 1/: index.html
criterion/day 3/part 2/: index.html
criterion/day 4/part 1/: index.html
criterion/day 4/part 2/: index.html
criterion/day 5/part 1/: index.html
criterion/day 5/part 2/: index.html
criterion/day 6/: index.html
criterion/day 6/part 1/: index.html
criterion/day 6/part 2/: index.html
criterion/day 7/part 1/: index.html
criterion/day 7/part 2/: index.html
criterion/day 8/part 1/: index.html
criterion/day 8/part 2/: index.html
criterion/day 9/: index.html
criterion/day 9/part 1/: index.html
criterion/day 9/part 2/: index.html
hs/: LICENSE  README.md  aoc2024.cabal  cabal.project
hs/app/: Main.hs
hs/bench/: Main.hs
hs/src/: Common.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
hs/src/cbits/: atomics.c
hs/test/: CommonSpec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  Day16Spec.hs  Day17Spec.hs  Day18Spec.hs  Day19Spec.hs  Day1Spec.hs  Day20Spec.hs  Day21Spec.hs  Day22Spec.hs  Day23Spec.hs  Day24Spec.hs  Day25Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
hyperfine/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  all.md
jmh-visualizer/: provided.js
kt/: .envrc  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kt/aoc2024-exe/: build.gradle.kts
kt/aoc2024-exe/src/blockingBench/kotlin/com/github/ephemient/aoc2024/exe/: Day22Bench.kt  Day6Bench.kt  RunBlockingBenchmark.kt
kt/aoc2024-exe/src/commonBench/kotlin/com/github/ephemient/aoc2024/exe/: Day10Bench.kt  Day11Bench.kt  Day12Bench.kt  Day13Bench.kt  Day14Bench.kt  Day15Bench.kt  Day16Bench.kt  Day17Bench.kt  Day18Bench.kt  Day19Bench.kt  Day1Bench.kt  Day20Bench.kt  Day21Bench.kt  Day22Bench.kt  Day23Bench.kt  Day24Bench.kt  Day25Bench.kt  Day2Bench.kt  Day3Bench.kt  Day4Bench.kt  Day5Bench.kt  Day6Bench.kt  Day7Bench.kt  Day8Bench.kt  Day9Bench.kt  RunBlockingBenchmark.kt
kt/aoc2024-lib/: build.gradle.kts
kt/aoc2024-lib/src/commonMain/kotlin/com/github/ephemient/aoc2024/: CommonPriorityQueue.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day16.kt  Day17.kt  Day18.kt  Day19.kt  Day2.kt  Day20.kt  Day22.kt  Day23.kt  Day24.kt  Day25.kt  Day3.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt  Day8.kt  Day9.kt  Days.kt  Math.kt  Parallel.kt  PriorityQueue.kt  Transpose.kt
kt/aoc2024-lib/src/commonTest/kotlin/com/github/ephemient/aoc2024/: Day10Test.kt  Day11Test.kt  Day12Test.kt  Day13Test.kt  Day14Test.kt  Day15Test.kt  Day16Test.kt  Day17Test.kt  Day18Test.kt  Day19Test.kt  Day1Test.kt  Day20Test.kt  Day21Test.kt  Day22Test.kt  Day23Test.kt  Day24Test.kt  Day25Test.kt  Day2Test.kt  Day3Test.kt  Day4Test.kt  Day5Test.kt  Day6Test.kt  Day7Test.kt  Day8Test.kt  Day9Test.kt
kt/aoc2024-lib/src/jvmMain/kotlin/com/github/ephemient/aoc2024/: Day17Jvm.kt  JvmPriorityQueue.kt
kt/aoc2024-lib/src/jvmTest/kotlin/com/github/ephemient/aoc2024/: Day17JvmTest.kt
kt/aoc2024-lib/src/nonJvmMain/kotlin/com/github/ephemient/aoc2024/: PriorityQueue.kt
kt/graalvm/: build.gradle.kts
kt/gradle/: libs.versions.toml
kt/processor/: build.gradle.kts
py/: .gitignore  README.md  poetry_build.py  pyproject.toml  test_benchmark.py
py/aoc2024/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day19c.py  day2.py  day20.py  day20c.py  day21.py  day22.py  day22c.pxd  day22c.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day6c.py  day7.py  day8.py  day9.py  day9c.py  main.py
rs/: Cargo.toml  README.md
rs/benches/: criterion.rs
rs/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
(+23 files in other folders)
