cabal-version: 3.0
name: aoc2024
version: 0.1.0.0
synopsis:
  Please see the README on GitHub at <https://github.com/ephemient/aoc2024/blob/main/hs/README.md>

homepage: https://github.com/ephemient/aoc2024/tree/main/hs
license: BSD-3-Clause
license-file: LICENSE
author: Daniel Lin
maintainer: ephemient@gmail.com
category: None
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/ephemient/aoc2024.git
  subdir: hs

library
  hs-source-dirs: src
  exposed-modules:
    Day1
    Day10
    Day11
    Day2
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  other-modules:
    Common

  build-depends:
    base ^>=4.20.0.0,
    containers ^>=0.7,
    megaparsec ^>=9.7.0,
    parallel ^>=3.2.2.0,
    split ^>=0.2.5,
    text ^>=2.1.2,
    vector ^>=0.13.2.0,

  ghc-options: -Wall
  default-language: GHC2024

executable aoc2024
  hs-source-dirs: app
  main-is: Main.hs
  c-sources: app/cbits/main.c
  build-depends:
    aoc2024,
    base ^>=4.20.0.0,
    filepath ^>=1.5.2.0,
    megaparsec ^>=9.7.0,
    text ^>=2.1.1,

  ghc-options:
    -no-hs-main
    -threaded
    -Wall

  default-language: GHC2024

test-suite aoc2024-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Day10Spec
    Day11Spec
    Day1Spec
    Day2Spec
    Day3Spec
    Day4Spec
    Day5Spec
    Day6Spec
    Day7Spec
    Day8Spec
    Day9Spec

  build-depends:
    aoc2024,
    base ^>=4.20.0.0,
    hspec ^>=2.11.10,
    text ^>=2.1.1,

  build-tool-depends:
    hspec-discover:hspec-discover ^>=2.11.10

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall

  default-language: GHC2024

benchmark aoc2024-bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  c-sources: bench/cbits/main.c
  build-depends:
    aoc2024,
    base ^>=4.20.0.0,
    criterion ^>=1.6.4.0,
    filepath ^>=1.5.2.0,
    text ^>=2.1.1,

  ghc-options:
    -no-hs-main
    -threaded

  default-language: GHC2024
