[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Daniel Lin <ephemient@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ephemient/aoc2024/tree/main/py"

[tool.poetry.dependencies]
python = "^3.13"
natsort = "^8.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
pytest = "^8.3.4"
pytest-benchmark = { version = "^5.1.0", extras = ["histogram"] }

[tool.pytest.ini_options]
addopts = '--doctest-modules --benchmark-disable --benchmark-sort=fullname'
required_plugins = ['pytest-benchmark']

[tool.poetry.scripts]
aoc2024 = "aoc2024.main:main"

[tool.poetry.plugins."aoc2024.days"]
day1 = "aoc2024.day1:parts"
day2 = "aoc2024.day2:parts"
day3 = "aoc2024.day3:parts"
day4 = "aoc2024.day4:parts"
day5 = "aoc2024.day5:parts"
day6 = "aoc2024.day6:parts"
day7 = "aoc2024.day7:parts"
day8 = "aoc2024.day8:parts"
day9 = "aoc2024.day9:parts"
day10 = "aoc2024.day10:parts"
day11 = "aoc2024.day11:parts"
day12 = "aoc2024.day12:parts"
day13 = "aoc2024.day13:parts"
day14 = "aoc2024.day14:parts"
day15 = "aoc2024.day15:parts"
day16 = "aoc2024.day16:parts"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
